docs/v1/weapons.md
# Weapons

Chili Bullet Weapons Version 1.7.0

- [Top Page](index.html)
  - [How to Get Started](introduction.html)
  - [Farming](farming.html)
  - [Foods](foods.html)
  - **Weapons**
    - [Bullet Chili Arrow](#bullet-chili-arrow)
    - [Chili Bullet](#chili-bullet)
    - [Chili Bullet Gun](#chili-bullet-gun)
      - [Upgrading Guns](#upgrading-guns)
    - [Chili Bullet Gun with Bayonet](#chili-bullet-gun-with-bayonet)
    - [Chili Bullet Machine Gun](#chili-bullet-machine-gun)
  - [Configuration](config.html)

See also: [Weapon Data](weapon_data.html)

## Bullet Chili Arrow

|DANGER|
|:-:|
|💥 **EXPLOSIVE**|

A bullet chili arrow serves as ammunition for bows, crossbows, and dispensers.

![Crafting bullet chili arrow from bullet-like chili pepper](../media/item/crafting/crafting_chili_arrow.png)
![Crafting bullet chili arrow from chili Bullet](../media/item/crafting/crafting_chili_arrow_from_bullet.png)

When a bullet chili arrow is shot and hits an entity or a block, it causes a small explosion, dealing explosive damage to nearby entities.

![Attack with bullet chili arrow 1](../media/item/misc/attack_with_chili_arrow_1.png)
![Attack with bullet chili arrow 2](../media/item/misc/attack_with_chili_arrow_2.png)

Power enchanted bows increase the explosive power and Multishot enchanted crossbows increase the number of bullet chili arrows shot.

## Chili Bullet

A chili bullet serves as ammunition for chili bullet guns and can be crafted from a bullet-like chili pepper.

![Crafting chili bullet](../media/item/crafting/crafting_chili_bullet.png)

Chili bullets will disappear two seconds after they are shot.

When a chili bullet hits an entity, there is a 10% chance of a critical hit.

## Chili Bullet Gun

A chili bullet gun is a break-action single-shot gun that shoots chili bullets to attack mobs at a distance.

![Crafting chili bullet gun](../media/item/crafting/crafting_chili_bullet_gun.png)

Chili bullet guns can be shot with the same operation as crossbows. Specifically, unloaded guns can be loaded by holding down the right mouse button, and loaded guns can be shot by right-clicking.

Chili bullet guns can have the same enchantments as crossbows, and each gun can have a different appearance, display name, and performance depending on the enchantment it has.

|Enchantment|Appearances<br/>(Closed/Open)|Display Name|
|-----------|:---------------------------:|------------|
|Piercing|![ ](../media/item/rifle_32.png)![ ](../media/item/rifle_loading_32.png)|Chili Bullet Rifle|
|Multishot|![ ](../media/item/shotgun_32.png)![ ](../media/item/shotgun_loading_32.png)|Chili Bullet Volley Gun|
|Other than above|![ ](../media/item/pistol_32.png)![ ](../media/item/pistol_loading_32.png)|Chili Bullet Pistol|

Chili bullet rifles are highly accurate, and bullets from them pass through the number of entities equal to the Piercing level.

Chili bullet volley guns are less accurate, and they can shoot four bullets in a single shot but also have four times the ammunition consumption and wear per shot.

A chili bullet gun with custom name will have a reduced chance of durability reduction.

### Upgrading Guns

Chili bullet guns can be upgraded by using upgrade items.

To upgrade a chili bullet gun, follow these steps:

1. Hold a gun in the off-hand
2. Hold an upgrade item in the main hand
3. Use (right-click) the item in the main hand

![Upgrading chili bullet gun](../media/item/misc/upgrading_chili_bullet_gun.png)
→
![Upgraded chili bullet gun with bayonet](../media/item/misc/upgraded_chili_bullet_gun_with_bayonet.png)

Currently, there are three types of upgrade items available.

- ![ ](../media/item/upgrade_gun_bayonet.png) Bayonet Upgrade
- ![ ](../media/item/upgrade_gun_barrel.png) Gun Barrel Upgrade
- ![ ](../media/item/upgrade_gun_mechanism.png) Gun Mechanism Upgrade

Bayonet Upgrade  
![Crafting bayonet upgrade](../media/item/crafting/crafting_upgrade_gun_bayonet.png)

A bayonet upgrade is an item to upgrade a chili bullet gun to a chili bullet gun with bayonet.

Gun Barrel Upgrade  
![Crafting gun barrel upgrade](../media/item/crafting/crafting_upgrade_gun_barrel.png)

A gun barrel upgrade gives Piercing II to a gun without Piercing and Multishot to a gun with Piercing IV.

Gun Mechanism Upgrade  
![Crafting gun mechanism upgrade](../media/item/crafting/crafting_upgrade_gun_mechanism.png)

A gun mechanism upgrade gives Quick Charge I to a gun without Quick Charge.

## Chili Bullet Gun with Bayonet

A chili bullet gun with bayonet is a chili bullet gun with a bayonet fitted and can deal 6 (♥ × 3) damage in melee combat.

![Crafting chili bullet gun with bayonet](../media/item/crafting/crafting_bayoneted_gun_v1.2.0.png)

Bayonet upgrade items can be used to make a chili bullet gun with bayonet retaining the enchantments.

![Upgrading chili bullet gun](../media/item/misc/upgrading_chili_bullet_gun_with_enchantments_and_damage.png)
→
![Upgraded chili bullet gun with bayonet](../media/item/misc/upgraded_chili_bullet_gun_with_bayonet_enchantments_and_damage.png)

Each chili bullet gun with bayonet can also have a different appearance, display name, and performance depending on the enchantment it has.

|Enchantment|Appearances<br/>(Closed/Open)|Display Name|
|-----------|:---------------------------:|------------|
|Piercing|![ ](../media/item/rifle_bayoneted_32.png)![ ](../media/item/rifle_bayoneted_loading_32.png)|Chili Bullet Rifle with Bayonet|
|Multishot|![ ](../media/item/shotgun_bayoneted_32.png)![ ](../media/item/shotgun_bayoneted_loading_32.png)|Chili Bullet Volley Gun with Bayonet|
|Other than above|![ ](../media/item/pistol_bayoneted_32.png)![ ](../media/item/pistol_bayoneted_loading_32.png)|Chili Bullet Pistol with Bayonet|

A chili bullet gun with bayonet with custom name will have a reduced chance of durability reduction.

## Chili Bullet Machine Gun

A chili bullet machine gun is an automatic gun that shoots chili bullets to attack mobs at a distance.

![Crafting chili bullet machine gun with crimson planks](../media/item/crafting/crafting_chili_bullet_machine_gun_with_crimson_planks.png)
![Crafting chili bullet machine gun with warped planks](../media/item/crafting/crafting_chili_bullet_machine_gun_with_warped_planks.png)

A chili bullet machine gun can resist fire and lava when dropped as an item.

A chili bullet machine gun can be loaded with the first bullet by holding down the right mouse button, and then the right mouse button can be used to shoot until the inventory runs out of bullets.

In survival mode, Unbreaking and Mending enchantments are highly recommended, as chili bullet machine gun is not durable!

A chili bullet machine gun with custom name will have a reduced chance of durability reduction.

Chili bullet machine gun cannot be upgraded with any upgrade items.
